--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119058657-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119058657-2');
+    </script>
     <meta charset="utf-8">
     <title>Infinity Run</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
