Display high score for current session

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="initial start-game-button button hide">Start Game</div>
         </div>
       </div>
+      <p class="high-score hide">High Score: <span class="score">0</span></p>
     </div>
     <footer>
       <div class="bottom-links">
